# bottom_up_corpus

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
bottom_up_corpus/: __init__.py  cli.py  completeness.py  config.py  entity.py  extract.py  financials.py  gleif.py  http.py  indices.py  models.py  naming.py  openfigi.py  ownership.py  pipeline.py  rag.py  render.py  storage.py  submission.py  taxonomy.py  universe.py
docs/: ARCHITECTURE.md  BE_STORI_STATUS.md  EU_BACKENDS.md  EU_FINANCIALS.md  EU_PILLAR.md  FINANCIALS.md  INGESTION_RAG.md  REGISTER_FINANCIALS.md  ROADMAP.md  SEC_PILLAR.md
examples/: 01_resolve_universe.py  02_discover_filings.py  03_download_and_extract.py  04_xbrl_financials.py  05_rag_items.py  06_universe_from_file.py  07_fts_resolution.py  08_fts_cache.py  09_openfigi_enrich.py  10_ownership.py  11_entities.py  12_sp500_historical.py  13_discover_index.py  14_completeness_report.py  15_name_resolution.py  16_eu_acquire.py  17_eu_resolve_identity.py  18_eu_openfigi_bridge.py  19_eu_discover_one_backend.py  20_eu_acquire_discovery.py  21_eu_coverage_report.py  22_eu_listing_dispatch.py  23_eu_dedup.py  24_eu_backends_catalog.py  25_register_catalog.py  26_no_brreg_financials.py  27_register_identity.py  28_uk_confidence_gate.py  29_uk_companies_house_financials.py  README.md
scripts/: calibrate_arelle.py  capture_be_stori.py  validate_be.py  validate_eu_financials.py
tests/: conftest.py  test_cik_lookup.py  test_cli.py  test_cli_eu_financials.py  test_completeness.py  test_config.py  test_download.py  test_edgar_fts.py  test_edgar_index.py  test_edgar_submissions.py  test_edgar_xbrl.py  test_entity.py  test_eu_arelle.py  test_eu_financials.py  test_eu_ifrs_concepts.py  test_eu_oim.py  test_extract.py  test_financials.py  test_http.py  test_rag.py  (+23 more)
(+156 files in other folders)
