[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bottom_up_corpus"
version = "0.1.0"
description = "Open-data corpus of company filings (SEC EDGAR + extensions) — the bottom-up/micro counterpart to cb_corpus."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# The Belgium (FSMA STORI) backend needs a browser-impersonating HTTP client to
# clear the FSMA F5 WAF. Imported lazily; only required to run the BE backend.
be = ["curl_cffi>=0.7"]
# Tier B ESEF parsing: local .zip packages via Arelle. Imported lazily inside
# oim_from_esef_zip; only required to run the Arelle bridge.
eu-financials = ["arelle-release"]

[project.scripts]
bottom_up_corpus = "bottom_up_corpus.cli:main"

[tool.setuptools.packages.find]
include = ["bottom_up_corpus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
